--- a/Grow.Server/Views/Home/pbnb.cshtml
+++ b/Grow.Server/Views/Home/pbnb.cshtml
@@ -16,53 +16,37 @@
     <section class="wrapper style4 container" style="text-align: center">
         <div class="content">
             <section>
-                
-                <!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-    #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-    /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="https://pioniergarage.us17.list-manage.com/subscribe/post?u=da3f5cc2994d9b3c480223b41&amp;id=dad326a027" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-    <h2>Sign up to get notified about the main events, the opening of team registrations and other news.</h2>
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-<div class="mc-field-group">
-    <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
-    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-<div class="mc-field-group">
-    <label for="mce-FNAME">First Name </label>
-    <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-</div>
-<div class="mc-field-group">
-    <label for="mce-LNAME">Last Name </label>
-    <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-</div>
-    <div id="mce-responses" class="clear">
-        <div class="response" id="mce-error-response" style="display:none"></div>
-        <div class="response" id="mce-success-response" style="display:none"></div>
-    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_da3f5cc2994d9b3c480223b41_dad326a027" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-<!--End mc_embed_signup-->
+            <p><strong>Nutzungsbedingungen</strong></p>
+                <p>Die Aktion &ldquo;GROW Photo Booth&rdquo; (nachfolgend: &bdquo;Aktion&bdquo;) wird vom 18.11.2020 bis 18.12.2020 (nachfolgend &bdquo;Aktionszeitraum&bdquo;) veranstaltet von</p>
+                <p>PionierGarage e.V.</p>
+                <p>Rintheimer Strasse 15</p>
+                <p>76131 Karlsruhe</p>
+                <p>(nachfolgend: &bdquo;Veranstalter").</p>
+                <p>&sect; 1 Aktion</p>
+                <p>W&auml;hrend des Aktionszeitraums kann der Nutzer die Aktion kostenlos nutzen.</p>
+                <p>Die Nutzung der Aktion erfolgt in folgenden Schritten:</p>
+                <p>1. Erstellen eines Fotos (nachfolgend: &bdquo;Material&ldquo;);</p>
+                <p>2. Akzeptieren der Nutzungsbedingungen;</p>
+                <p>3. Eintragen der eigenen Email-Adresse, an die das Material verschickt wird;</p>
+                <p>4. &Uuml;bermittlung der von Nutzer eingegebenen Daten mittels des Buttons &bdquo;Jetzt senden&ldquo; per Internet &uuml;bermittelt an die Mintano UG, Erkrather Str. 401, 40231 D&uuml;sseldorf ("Mintano"), welche die Software der Virtual Booth zur Verf&uuml;gung stellt. Am Ende des Aktionszeitraumes werden die Daten gel&ouml;scht;</p>
+                <p>5. &Uuml;bermittlung der von Nutzer eingegebenen Daten&nbsp; per Internet an den Veranstalter;</p>
+                <p>6. &Uuml;bermittlung des Materials an die vom Nutzer angegebene eigene E-Mail-Adresse;</p>
+                <p>7. Verwendung des Materials durch den Veranstalter im Einklang mit &sect; 3 dieser Nutzungsbedingungen, sofern der Nutzer im Versendeprozess seine Einwilligung hierf&uuml;r erteilt hat.</p>
+                <p>Die Nutzung ist freiwillig, kostenlos und nicht an eine Kaufverpflichtung gekoppelt.</p>
+                <p>Die Teilnahme an der Aktion setzt voraus, dass die Nutzungsbedingungen verbindlich angenommen werden.</p>
+                <p>&sect; 2 Nutzer</p>
+                <p>Nutzer der Virtual Booth k&ouml;nnen alle nat&uuml;rlichen und gesch&auml;ftsf&auml;higen Personen mit einem Mindestalter von 16 Jahren sein.</p>
+                <p>&sect; 3 Einr&auml;umung von NutzungsrechtenMit seiner Teilnahme und Einwilligung im Versendeprozess erkl&auml;rt sich der Nutzer ausdr&uuml;cklich damit einverstanden, dass der Veranstalter das Material unter Beachtung der Pers&ouml;nlichkeitsrechte des Nutzers zu eigenen Werbezwecken im Zusammenhang mit der Aktion</p>
+                <p>&bull; in Onlinemedien (insbesondere bei Facebook, Instagram, Twitter oder der Internetseite des Veranstalters) sowie in Offlinemedien (zum Beispiel im Printbereich, in einschl&auml;gigen Zeitschriften usw.) ver&ouml;ffentlichen, verbreiten, senden und &ouml;ffentlich zug&auml;nglich machen,</p>
+                <p>&bull; &ouml;ffentlich auf- und vorf&uuml;hren (insbesondere auf Messen, z.B. auf einer Leinwand oder anderen Oberfl&auml;che wiedergeben oder auf einem Bildschirm laufen lassen)</p>
+                <p>F&uuml;r diese Zwecke darf der Veranstalter das Material ganz oder teilweise</p>
+                <p>&bull; vervielf&auml;ltigen,</p>
+                <p>&bull; mit Begleitkommentaren versehen, mit anderen Werken kombinieren oder verbinden und auf andere Weise bearbeiten und das bearbeitete Material wie das originale Material nutzen, und</p>
+                <p>&bull; in Datenbanken speichern.</p>
+                <p>Soweit dies f&uuml;r die Nutzung der oben einger&auml;umten Rechte erforderlich ist, darf der Veranstalter auch Dritte einsetzen und diesen die zur Erf&uuml;llung ihrer Aufgaben erforderlichen Rechte einr&auml;umen.</p>
+                <p>Die vorstehende Nutzungsrechtseinr&auml;umung kann der Nutzer jederzeit mit Wirkung f&uuml;r die Zukunft gegen&uuml;ber dem Veranstalter widerrufen.&nbsp;</p>    
+
             
-                <p>
-                    Thank you for your interest in our newsletter.
-                </p>
-                <p>
-                    You can find our <a href="https://pioniergarage.de/datenschutz" target="_blank">privacy statement here</a>!
-                </p>
-                <footer>
-                    <a href="javascript:window.history.back()" class="btn btn-default">Go back</a>
-                </footer>
             </section>
         </div>
     </section>
