--- a/Grow.Server/Views/Home/pbnb.cshtml
+++ b/Grow.Server/Views/Home/pbnb.cshtml
@@ -16,7 +16,7 @@
     <section class="wrapper style4 container" style="text-align: center">
         <div class="content">
             <section>
-            <p><strong>Nutzungsbedingungen</strong></p>
+                <p><strong>Nutzungsbedingungen</strong></p>
                 <p>Die Aktion &ldquo;GROW Photo Booth&rdquo; (nachfolgend: &bdquo;Aktion&bdquo;) wird vom 18.11.2020 bis 18.12.2020 (nachfolgend &bdquo;Aktionszeitraum&bdquo;) veranstaltet von</p>
                 <p>PionierGarage e.V.</p>
                 <p>Rintheimer Strasse 15</p>
@@ -44,7 +44,45 @@
                 <p>&bull; mit Begleitkommentaren versehen, mit anderen Werken kombinieren oder verbinden und auf andere Weise bearbeiten und das bearbeitete Material wie das originale Material nutzen, und</p>
                 <p>&bull; in Datenbanken speichern.</p>
                 <p>Soweit dies f&uuml;r die Nutzung der oben einger&auml;umten Rechte erforderlich ist, darf der Veranstalter auch Dritte einsetzen und diesen die zur Erf&uuml;llung ihrer Aufgaben erforderlichen Rechte einr&auml;umen.</p>
-                <p>Die vorstehende Nutzungsrechtseinr&auml;umung kann der Nutzer jederzeit mit Wirkung f&uuml;r die Zukunft gegen&uuml;ber dem Veranstalter widerrufen.&nbsp;</p>    
+                <p>Die vorstehende Nutzungsrechtseinr&auml;umung kann der Nutzer jederzeit mit Wirkung f&uuml;r die Zukunft gegen&uuml;ber dem Veranstalter widerrufen.&nbsp;</p>
+                <p>&sect; 4 Rechte und Pflichten des Nutzers</p>
+                <p>Der Nutzer ist berechtigt, das an seine E-Mail Adresse verschickte Material nach eigenem Ermessen zu nutzen, insbesondere das Material zu vervielf&auml;ltigen, verbreiten, vorzuf&uuml;hren und &ouml;ffentlich zug&auml;nglich zu machen, sofern die Nutzung nicht im Widerspruch zu dem unter &sect; 3 einger&auml;umten Rechte steht. Insbesondere ist der Nutzer berechtig, das Material unter dem vom Veranstalter angegebenen Hashtag (#) in sozialen Netzwerken mit anderen zu teilen.</p>
+                <p>Eine Nutzung ist untersagt, sofern die Nutzung geeignet ist, das Ansehen des Veranstalters sowie der GRENKE AG, welche mit einem Logo auf den Fotos vertreten ist, zu besch&auml;digen.</p>
+                <p>&sect; 5 Rechte Dritter</p>
+                <p>Falls der Nutzer selbst nicht (alleiniger) Inhaber der Rechte an dem Material ist (insbesondere nicht die einzige auf dem Material abgebildete Person), wird er daf&uuml;r sorgen, dass er alle erforderlichen Rechte (z.B. Lizenzen) und Einwilligungen wirksam erworben bzw. eingeholt hat.</p>
+                <p>&sect; 6 Art, Umfang und Zweck der Verarbeitung personenbezogener Daten</p>
+                <p>Im Folgenden informieren wir &uuml;ber die Erhebung personenbezogener Daten bei Teilnahme an Aktion.</p>
+                <p>Personenbezogene Daten sind alle Daten, die auf den Nutzer pers&ouml;nlich beziehbar sind, z.&thinsp;B. Foto, Name, Adresse, Mobilnummer, E-Mail-Adressen.</p>
+                <p>Die vom Nutzer im Rahmen der Aktion erhobenen personenbezogenen Daten sind seine E-Mail Adresse sowie das durch den Nutzer erstellte Bildmaterial.</p>
+                <p>Die angegebenen E-Mail-Adresse wird zum Zwecke der elektronischen &Uuml;bermittlung des Materials an den Nutzer verwendet.</p>
+                <p>Das erstellte Material darf vom Veranstalter im unter &sect; 3 umschriebenen Umfang verarbeitet werden.</p>
+                <p>Ferner d&uuml;rfen der Veranstalter Daten ohne Personenbezug zu statistischen Zwecken nutzen.</p>
+                <p>&sect; 7 Weitergehende datenschutzrechtliche Information</p>
+                <p>Verantwortlicher gem. Art. 4 Abs. 7 EU-Datenschutz-Grundverordnung (DS-GVO) ist der Veranstalter.</p>
+                <p>Ab dem 25. Mai 2018 ist Art 6 Abs. 1 b DSGVO die Rechtsgrundlage der Verarbeitung, sofern die personenbezogenen Daten zur &Uuml;bermittlung des Materials an den Nutzer verwendet werden. Die Verarbeitung der E-Mail-Adresse zu Werbezwecken beruht auf Art. 6 Abs. 1 f DSGVO. Andernfalls ist Rechtsgrundlage Art. 6 Abs. 1 a DSGVO.</p>
+                <p>Die personenbezogenen Daten des Nutzers werden an Mintano &uuml;bermittelt. Sofern ein Drittstaatentransfer stattfindet, wird der Veranstalter sicherstellen, dass ausreichende Ma&szlig;nahmen ergriffen wurden, um ein angemessenes Datenschutzniveau sicherzustellen. Einzelheiten dazu, welche konkreten Ma&szlig;nahmen ergriffen wurden k&ouml;nnen beim Veranstalter angefragt werden.</p>
+                <p>Die personenbezogenen Daten des Nutzers werden in folgende Drittl&auml;nder &uuml;bermittelt: USA</p>
+                <p>Der Nutzer hat das Recht</p>
+                <p>&bull; gem&auml;&szlig; Art. 7 Abs. 3 DSGVO seine einmal erteilte Einwilligung jederzeit gegen&uuml;ber dem Veranstalter zu widerrufen. Dies hat zur Folge, dass die Datenverarbeitung, die auf dieser Einwilligung beruhte, f&uuml;r die Zukunft nicht mehr fortgef&uuml;hrt werden darf;</p>
+                <p>&bull; gem&auml;&szlig; Art. 15 DSGVO Auskunft &uuml;ber seine vom Veranstalter verarbeiteten personenbezogenen Daten zu verlangen.</p>
+                <p>&bull; gem&auml;&szlig; Art. 16 DSGVO unverz&uuml;glich die Berichtigung unrichtiger oder Vervollst&auml;ndigung seiner beim Veranstalter gespeicherten personenbezogenen Daten zu verlangen;</p>
+                <p>&bull; gem&auml;&szlig; Art. 17 DSGVO die L&ouml;schung seiner beim Veranstalter gespeicherten personenbezogenen Daten zu verlangen, soweit nicht die Verarbeitung zur Aus&uuml;bung des Rechts auf freie Meinungs&auml;u&szlig;erung und Information, zur Erf&uuml;llung einer rechtlichen Verpflichtung, aus Gr&uuml;nden des &ouml;ffentlichen Interesses oder zur Geltendmachung, Aus&uuml;bung oder Verteidigung von Rechtsanspr&uuml;chen erforderlich ist;</p>
+                <p>&bull; gem&auml;&szlig; Art. 18 DSGVO die Einschr&auml;nkung der Verarbeitung seiner personenbezogenen Daten zu verlangen, soweit die Richtigkeit der Daten von ihm bestritten wird, die Verarbeitung unrechtm&auml;&szlig;ig ist, er aber deren L&ouml;schung ablehnt und der Veranstalter die Daten nicht mehr ben&ouml;tigt, er jedoch diese zur Geltendmachung, Aus&uuml;bung oder Verteidigung von Rechtsanspr&uuml;chen ben&ouml;tigt oder er gem&auml;&szlig; Art. 21 DSGVO Widerspruch gegen die Verarbeitung eingelegt hat;</p>
+                <p>&bull; gem&auml;&szlig; Art. 20 DSGVO seine personenbezogenen Daten, die er dem Veranstalter bereitgestellt hat, in einem strukturierten, g&auml;ngigen und maschinenlesebaren Format zu erhalten oder die &Uuml;bermittlung an einen anderen Verantwortlichen zu verlangen ;</p>
+                <p>&bull; gem&auml;&szlig;. Art. 21 das Recht, Widerspruch zu erheben; und</p>
+                <p>&bull; gem&auml;&szlig; Art. 77 DSGVO sich bei einer Aufsichtsbeh&ouml;rde zu beschweren.</p>
+                <p>M&ouml;chte der Nutzer eines der oben genannten Rechte geltend machen oder seine datenschutzrechtliche Frage haben, kann er sich an den Veranstalter wenden.</p>
+                <p>Der Verarbeitung seiner/ihrer personenbezogenen Daten kann der Nutzer jederzeit mit Wirkung f&uuml;r die Zukunft gegen&uuml;ber dem Veranstalter widerrufen.</p>
+                <p>Das Material wird vorbehaltlich eines fr&uuml;heren Widerrufs nach Abschluss des Aktionszeitraums f&uuml;r einen Zeitraum von 2 Jahren gespeichert und verarbeitet.</p>
+                <p>Bei Nichtbereitstellung der personenbezogenen Daten kann der Nutzer das Material nicht erhalten und der Veranstalter diese nicht zu der in &sect; 3 beschriebener Weise nutzen.</p>
+                <p>&sect; 8 Haftung</p>
+                <p>Der Veranstalter haftet unbeschr&auml;nkt f&uuml;r Sch&auml;den aufgrund von Vorsatz und grober Fahrl&auml;ssigkeit, sowie bei einer vors&auml;tzlichen oder fahrl&auml;ssigen Verletzung von Leib, Leben oder Gesundheit und bei Anspr&uuml;chen aus dem Produkthaftungsgesetz. Dar&uuml;ber hinaus haftet der Veranstalter auch f&uuml;r einen fahrl&auml;ssigen Versto&szlig; gegen eine Kardinalpflicht. Kardinalpflichten sind solche, deren Erf&uuml;llung die ordnungsgem&auml;&szlig;e Durchf&uuml;hrung der Aktion und die Erreichung des Vertragszwecks &uuml;berhaupt erst erm&ouml;glichen und auf deren Einhaltung ein Nutzer regelm&auml;&szlig;ig vertrauen durfte. Bei einem Versto&szlig; gegen eine Kardinalpflicht ist die Haftung der H&ouml;he nach beschr&auml;nkt auf den bei Vertragsschluss vorhersehbaren und vertragstypischen Schaden. Eine weitergehende Haftung ist ausgeschlossen. Besondere haftet der Veranstalter nicht f&uuml;r die Funktionsf&auml;higkeit von Telekommunikationsnetzen, bei Stromausf&auml;llen und bei Ausf&auml;llen von Servern, die nicht im Einflussbereich des Veranstalters liegen.</p>
+                <p>&sect; 9 Vorzeitige Beendigung der Aktion</p>
+                <p>Der Veranstalter beh&auml;lt sich vor, die Aktion zu jedem Zeitpunkt ohne Vorank&uuml;ndigung und ohne Angabe von Gr&uuml;nden abzubrechen oder zu beenden. Von dieser M&ouml;glichkeit macht der Veranstalter insbesondere dann Gebrauch, wenn aus technischen Gr&uuml;nden (z.B. Viren im Computersystem, Manipulation oder Fehler in der Hard- und/oder Software) oder aus rechtlichen Gr&uuml;nden eine ordnungsgem&auml;&szlig;e Durchf&uuml;hrung der Aktion nicht gew&auml;hrleistet werden kann.</p>
+                <p>&sect; 10 Sonstiges</p>
+                <p>Es ist ausschlie&szlig;lich das Recht der Bundesrepublik Deutschland anwendbar.</p>
+                <p>Sollten einzelne dieser Bestimmungen ung&uuml;ltig sein oder werden, bleibt die G&uuml;ltigkeit der &uuml;brigen Teilnahmebedingungen hiervon unber&uuml;hrt.</p>
+                <p>Die Europ&auml;ische Kommission stellt eine Plattform zur Online-Streitbeilegung bereit, die unter www.ec.europa.eu/consumers/odr zu erreichen ist. Nutzer, die Verbraucher im Sinne des &sect; 13 BGB sind, haben die M&ouml;glichkeit, diese Plattform f&uuml;r die Beilegung von Streitigkeiten ohne Einschaltung eines Gerichts zu nutzen. Der Veranstalter ist nicht bereit, an Streitbeilegungsverfahren bei einer Verbraucherschlichtungsstelle teilzunehmen.</p>
 
             
             </section>
