--- a/Grow.Server/Views/Home/pbnb.cshtml
+++ b/Grow.Server/Views/Home/pbnb.cshtml
@@ -9,14 +9,13 @@
     <header class="special container">
         <span class="icon fa-user"></span>
         <h2>
-            Become a tester
+            Photo Booth Nutzungsbedingungen
         </h2>
     </header>
 
     <section class="wrapper style4 container" style="text-align: center">
         <div class="content">
             <section>
-                <p style="text-align: left;"><strong>Nutzungsbedingungen</strong></p>
                 <p style="text-align: left;">Die Aktion &ldquo;GROW Photo Booth&rdquo; (nachfolgend: &bdquo;Aktion&bdquo;) wird vom 18.11.2020 bis 18.12.2020 (nachfolgend &bdquo;Aktionszeitraum&bdquo;) veranstaltet von</p>
                 <p style="text-align: left;">PionierGarage e.V.</p>
                 <p style="text-align: left;">Rintheimer Strasse 15</p>
