--- a/Grow.Server/Views/Shared/Layouts/_FrontendLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_FrontendLayout.cshtml
@@ -74,6 +74,9 @@
                     <li>
                         @Html.ActionLink("About us", "About", "Home", new { year = ViewBag.LatestContestYear })
                     </li>
+                    <li>
+                        @Html.ActionLink("Photo Booth", "PhotoBooth", "Home", new { year = ViewBag.LatestContestYear })
+                    </li>
                 </ul>
             </nav>
         </header>
