--- a/Grow.Server/Views/Home/PhotoBooth.cshtml
+++ b/Grow.Server/Views/Home/PhotoBooth.cshtml
@@ -8,7 +8,7 @@
     <header class="special container">
         <span class="icon fa-user"></span>
         <h2>
-            Grenke PhotoBooth
+            GROW Photo Booth
         </h2>
     </header>
 
