--- a/Grow.Server/Views/Home/PhotoBooth.cshtml
+++ b/Grow.Server/Views/Home/PhotoBooth.cshtml
@@ -15,7 +15,7 @@
     <section class="wrapper style4 container" style="text-align: center">
         <div class="content">
             <section>
-           <iframe width=“1080” height=“900" src=“https://mintano.onebooth.com/2mmUE0Nu/gallery/”frameBorder=“0"></iframe>
+                <p> test</p>
             </section>
         </div>
     </section>
