--- a/Grow.Server/Views/Home/PhotoBooth.cshtml
+++ b/Grow.Server/Views/Home/PhotoBooth.cshtml
@@ -13,7 +13,7 @@
     </header>
 
     <section class="wrapper style4 container" style="text-align: center">
-        <iframe width="100vw" height="80vh" src="https://mintano.onebooth.com/2mmUE0Nu/gallery/" frameBorder="0"></iframe>
+        <iframe width="100%" height="100%" src="https://mintano.onebooth.com/2mmUE0Nu/gallery/" frameBorder="0"></iframe>
     </section>
 
 </article>
