--- a/Grow.Server/Views/Home/PhotoBooth.cshtml
+++ b/Grow.Server/Views/Home/PhotoBooth.cshtml
@@ -11,6 +11,12 @@
             GROW Photo Booth
         </h2>
     </header>
+    <section class="wrapper container" style="font-size: 100%; padding-top: 0px; padding-bottom: 0px;">
+        <header>
+            <p style="font-weight: 500;">
+                Try our new GROW Photo Booth and share your pictures online #growyouridea
+            </p>
+        </header>
 
     <section class="wrapper style4 container" style="text-align: center">
         <iframe width="100%" height="1000" src="https://mintano.onebooth.com/2mmUE0Nu/gallery/" frameBorder="0"></iframe>
