--- a/Grow.Server/Views/Home/PhotoBooth.cshtml
+++ b/Grow.Server/Views/Home/PhotoBooth.cshtml
@@ -13,7 +13,7 @@
     </header>
     <section class="wrapper container" style="font-size: 100%; padding-top: 0px; padding-bottom: 0px;">
         <header>
-            <p style="font-weight: 500;">
+            <p style="text-align: center">
                 Try our new GROW Photo Booth and share your pictures online #growyouridea
             </p>
         </header>
