--- a/Grow.Server/Views/Home/PhotoBooth.cshtml
+++ b/Grow.Server/Views/Home/PhotoBooth.cshtml
@@ -14,12 +14,12 @@
     <section class="wrapper container" style="font-size: 100%; padding-top: 0px; padding-bottom: 0px;">
         <header>
             <p style="text-align: center">
-                Try our new GROW Photo Booth and share your pictures online #growyouridea
+                Try our new GROW Photo Booth and share your pictures with <b>#growyouridea</
             </p>
         </header>
 
-    <section class="wrapper style4 container" style="text-align: center">
+    <center>
         <iframe width="100%" height="1000" src="https://mintano.onebooth.com/2mmUE0Nu/gallery/" frameBorder="0"></iframe>
-    </section>
+    </center>
 
 </article>
