--- a/Grow.Server/Views/Home/PhotoBooth.cshtml
+++ b/Grow.Server/Views/Home/PhotoBooth.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "Photo Booth";
 }
 
+<img src="https://pioniergarage.de/wp-content/uploads/2020/11/Web-Banner_1200x328px2.jpg" alt="GROW Photo Booth" width="100%" height="100%">
+
 <article id="main">
 
     <header class="special container">
