--- a/Grow.Server/Views/Home/PhotoBooth.cshtml
+++ b/Grow.Server/Views/Home/PhotoBooth.cshtml
@@ -3,8 +3,10 @@
     ViewBag.Title = "Photo Booth";
 }
 
+<center>
 <img src="https://pioniergarage.de/wp-content/uploads/2020/11/Web-Banner_1200x328px2.jpg" alt="GROW Photo Booth" width="100%" height="100%">
-
+</center>
+    
 <article id="main">
 
     <header class="special container">
