--- a/Grow.Server/Views/Home/PhotoBooth.cshtml
+++ b/Grow.Server/Views/Home/PhotoBooth.cshtml
@@ -17,7 +17,7 @@
     <section class="wrapper container" style="font-size: 100%; padding-top: 0px; padding-bottom: 0px;">
         <header>
             <p style="text-align: center">
-                Try our new GROW Photo Booth and share your pictures with <b>#growyouridea</
+                Have fun with the pictures of our new GROW Photo Booth. Share your pics with <b>#growyouridea</b>
             </p>
         </header>
 
