--- a/Grow.Server/Views/Home/PhotoBooth.cshtml
+++ b/Grow.Server/Views/Home/PhotoBooth.cshtml
@@ -19,6 +19,13 @@
             <p style="text-align: center">
                 Have fun with the pictures of our new GROW Photo Booth. Share your pics with <b>#growyouridea</b>
             </p>
+            <ul class="buttons" style="margin: 0">
+                        <li>
+                            <a href="@Model.Contest.RegistrationUrl" target="_blank" class="button special">
+                                Register now
+                            </a>
+                        </li>
+                    </ul>
         </header>
 
     <center>
