--- a/Grow.Server/Views/Home/PhotoBooth.cshtml
+++ b/Grow.Server/Views/Home/PhotoBooth.cshtml
@@ -21,8 +21,8 @@
             </p>
             <ul class="buttons" style="margin: 0">
                         <li>
-                            <a href="@Model.Contest.RegistrationUrl" target="_blank" class="button special">
-                                Register now
+                            <a href="https://mintano.onebooth.com/2mmUE0Nu" target="_blank" class="button special">
+                                Try the booth
                             </a>
                         </li>
                     </ul>
