--- a/Grow.Server/Views/Home/PhotoBooth.cshtml
+++ b/Grow.Server/Views/Home/PhotoBooth.cshtml
@@ -19,6 +19,7 @@
             <p style="text-align: center">
                 Have fun with the pictures of our new GROW Photo Booth. Share your pics with <b>#growyouridea</b>
             </p>
+        <center>
             <ul class="buttons" style="margin: 0">
                         <li>
                             <a href="https://mintano.onebooth.com/2mmUE0Nu" target="_blank" class="button special">
@@ -26,8 +27,9 @@
                             </a>
                         </li>
                     </ul>
+         </center>
         </header>
-
+            <br>
     <center>
         <iframe width="100%" height="1000" src="https://mintano.onebooth.com/2mmUE0Nu/gallery/" frameBorder="0"></iframe>
     </center>
