--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -83,9 +83,15 @@
             @if (Model.Contest.RegistrationUrl != null) {
                 <ul class="buttons" style="margin: 0">
                         <li>
+                            <! -- -->
                             <a href="@Model.Contest.RegistrationUrl" target="_blank" class="button special">
                                 Register now
                             </a>
+                            <! -- -->
+                             <a href="https://miro.com/app/board/o9J_lfEU8rU=/" target="_blank" class="button special">
+                                Join here
+                            </a>
+                            
                         </li>
                     </ul>
                     }
