--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -24,11 +24,12 @@
         </h2>
 
          // countdown
-     /*   var timeLeft = Model.ContestStart - DateTime.Now;
+        var timeLeft = Model.ContestStart - DateTime.Now;
+	<script>alert(timeLeft);</script>
         <h2>
             GROW @Model.Contest.Year is starting soon:<br />
             <countdown asp-datetime="Model.ContestStart" />
-        </h2>  */
+        </h2>
     }
     else if (Model.MainEvents.Any(e => e.Start > DateTime.Now))
     {
