show next-event-counter only 2 weeks before event-start-day

--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -19,18 +19,19 @@
     @if (Model.IsBeforeContest)
     {
      
-		<h2>
+	<h2>
             GROW 2021/22 is starting on 29.10.
         </h2>
 
          // countdown
-	/*
-        var timeLeft = Model.ContestStart - DateTime.Now;
-        <h2>
-            GROW @Model.Contest.Year is starting soon:<br />
-            <countdown asp-datetime="Model.ContestStart" />
-        </h2>
-	*/
+	
+	@if (DateTime.Now > Model.ContestStart - TimeSpan.FromDays(14) ) {
+        	<h2>
+        	    GROW @Model.Contest.Year is starting soon:<br />
+        	    <countdown asp-datetime="Model.ContestStart" />
+		</h2>
+	}
+	
     }
     else if (Model.MainEvents.Any(e => e.Start > DateTime.Now))
     {
