--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
     </ul>
 </section>
 
-<article id="main">
+<article id="main" style="padding:0;">
     <section class="wrapper container" style="font-size: 100%; padding-top: 0px; padding-bottom: 0px;">
         <header>
             @if (Model.IsBeforeContest)
