fast similar box-style of FAQ

--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -240,59 +240,22 @@
 <!---FAQ--->
 
 <article id="main">
-    <section class="wrapper container" style="font-size: 100%; padding-top: 0px; padding-bottom: 0px;">
-        <header>
-            
-            <h2 style="text-align: center"><strong>FAQ</strong></h2>
-            
-            <p style="font-weight: 500;">
-                <ol style="list-style: decimal;">                
-                    <li> 
-                        <dl>
-                            <dt><span style="font-style: italic;">In what language does GROW take place?</span></dt>
-                            <dd>The event will be held entirely in English this year.</dd>
-                        </dl>
-                    </li>
-                    <li> 
-                        <dl>
-                            <dt><span style="font-style: italic;">Can I take part if I’m not a student?</span></dt>
-                            <dd>Yes, GROW is for everyone, whether you’re working or not. However, each team must consist out of at least one student.</dd>
-                        </dl>
-                    </li>
-                    <li> 
-                        <dl>
-                            <dt><span style="font-style: italic;">Can we sign up as a team?</span></dt>
-                            <dd>Yes, in the registration form there is the option to enter already existing teams.</dd>
-                        </dl>
-                    </li>
-                    <li> 
-                        <dl>
-                            <dt><span style="font-style: italic;">If we already are a team, should every person sign up?</span></dt>
-                            <dd>No, you would make it easier for us, if you submitted one registration per idea.</dd>
-                        </dl>
-                    </li>
-                    <li> 
-                        <dl>
-                            <dt><span style="font-style: italic;">Can we take part as a university association?</span></dt>
-                            <dd>If your group consists of members of your association you can - of course - participate. However, note that you will need a defined team and should have the intention of founding a company.</dd>
-                        </dl>
-                    </li>
-                    <li> 
-                        <dl>
-                            <dt><span style="font-style: italic;">In what format will the contest take place in Corona times?</span></dt>
-                            <dd>We have decided to hold the event in a hybrid format: The kick-off will at least take place completely digitally, the other main events will depend on the occurrence of infection. Most workshops are - following a hygiene concept - held on site.</dd>
-                        </dl>
-                    </li>
-                    <li> 
-                        <dl>
-                            <dt><span style="font-style: italic;">Can I also participate if I am not in Karlsruhe during the competition?</span></dt>
-                            <dd>Yes, it will be possible to attend the obligatory events remotely. However, you might miss out some workshops that are held on site.</dd>
-                        </dl>
-                    </li>
-                </ol>                 
-            </p>
+<section class="wrapper style2 container special">
+        <header class="major">
+            <h2>FAQ</h2>
         </header>
-    </section>
+        
+        <p><strong>- In what language does GROW take place?</strong> <br>The event will be held entirely in English this year.</p>
+        
+        <p><strong>- Can I take part if I’m not a student?</strong> <br>Yes, GROW is for everyone, whether you’re working or not. However, each team must consist out of at least one student.</p>
+        
+        <p><strong>- Can we sign up as a team?</strong> <br>Yes, in the registration form there is the option to enter already existing teams.</p>
+        
+        
+    <p> <strong>- If we already are a team, should every person sign up?</strong><br>No, you would make it easier for us, if you submitted one registration per idea.</p><p>
+            <strong>- Can we take part as a university association?</strong><br>If your group consists of members of your association you can - of course - participate. However, note that you will need a defined team and should have the intention of founding a company.</p><p>
+            <strong>- In what format will the contest take place in Corona times?</strong><br>We have decided to hold the event in a hybrid format: The kick-off will at least take place completely digitally, the other main events will depend on the occurrence of infection. Most workshops are - following a hygiene concept - held on site.</p><p>
+            <strong>- Can I also participate if I am not in Karlsruhe during the competition?</strong><br>Yes, it will be possible to attend the obligatory events remotely. However, you might miss out some workshops that are held on site.</p></section>
 <!--stopp-->
 
     <section class="wrapper style3 container special" style="margin-top: 100px">
