remove corner-stripes from banner even after resize, overwrite on element-style for consistency

--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-<section id="banner">
+<section id="banner" style="background-size:0em,0em,auto,cover;">
     <div id="inner" style="margin-bottom:40px;">
         <div class="video-wrapper">
             <iframe width="600" height="337" src="https://www.youtube-nocookie.com/embed/kqhC5_nmaU8?modestbranding=1&rel=0&autohide=1&showinfo=0&controls=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="GROW"></iframe>
