center text below thomas hirt image

--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -298,7 +298,7 @@
             ---->
             <div class="centered">
                 <img src="/img/hirth.jpg" alt="Prof. Thomas Hirth" />
-                <p>
+                <p style="text-align:center;">
                     <strong>Prof. Dr. Thomas Hirth</strong><br style="display: block;" />
                     Vice-President of KIT
                 </p>
