updated headline and imageborder from 'our patrons' section

--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -284,7 +284,7 @@
 
     <section class="wrapper style3 container special" style="margin-top: 100px">
         <header class="major">
-            <h2>Our <strong>Patrons</strong></h2>
+            <h2>Here is our <strong>Patron</strong></h2>
         </header>
         <div class="people">
             <!----
@@ -297,7 +297,7 @@
             </div>
             ---->
             <div class="centered">
-                <img src="/img/hirth.jpg" alt="Prof. Thomas Hirth" />
+                <img src="/img/hirth.jpg" alt="Prof. Thomas Hirth" style="border:1px black solid;"/>
                 <p style="text-align:center;">
                     <strong>Prof. Dr. Thomas Hirth</strong><br style="display: block;" />
                     Vice-President of KIT
