fix resize bug for 'why grow?' and 'faq' section, text gets messy on small viewports

--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -195,28 +195,28 @@
             <img src="/img/icon/hourGlass.png" />
         </div>
         <p>
-            <strong>1. We value progress</strong><br />
+            <strong>1. We value progress</strong><br style="display:block;" />
             It doesn't matter where you start. We only want to see you advance as much as possible during those 11 weeks.
         </p>
         <div class="img-block">
             <img src="/img/icon/phoneCall.png" />
         </div>
         <p>
-            <strong>2. A business is more than a prototype</strong><br />
+            <strong>2. A business is more than a prototype</strong><br style="display:block;"/>
             Not only your prototype will be judged. A successfull venture includes understanding your customers, having a strong business model, building a network and validating your ideas.
         </p>
         <div class="img-block">
             <img src="/img/icon/businessman.png" />
         </div>
         <p>
-            <strong>3. GROW actively supports you</strong><br />
+            <strong>3. GROW actively supports you</strong><br style="display:block;"/>
             During those 11 weeks we try to help you advance as much as possible. We offer multiple full-day workshops to teach you the necessary soft skills about entrepreneurship. We connect you with experienced mentors that can give you feedback and the right mindset. And we give you access to our network of founders, investors and startups.
         </p>
         <div class="img-block">
             <img src="/img/icon/bigGroup.png" />
         </div>
         <p>
-            <strong>4. GROW is not for profit</strong><br />
+            <strong>4. GROW is not for profit</strong><br style="display:block;"/>
             GROW is organized by the student-run association <a href="https://pioniergarage.de" target="_blank" style="color: white; font-weight: bold">PionierGarage e.V.</a> Our first and foremost goal is to inspire students to found their own ventures.
         </p>
     </section>
@@ -245,17 +245,17 @@
             <h2>FAQ</h2>
         </header>
         
-        <p><strong>- In what language does GROW take place?</strong> <br>The event will be held entirely in English this year.</p>
+        <p><strong>- In what language does GROW take place?</strong> <br style="display:block;">The event will be held entirely in English this year.</p>
         
-        <p><strong>- Can I take part if I’m not a student?</strong> <br>Yes, GROW is for everyone, whether you’re working or not. However, each team must consist out of at least one student.</p>
+        <p><strong>- Can I take part if I’m not a student?</strong> <br style="display:block;">Yes, GROW is for everyone, whether you’re working or not. However, each team must consist out of at least one student.</p>
         
-        <p><strong>- Can we sign up as a team?</strong> <br>Yes, in the registration form there is the option to enter already existing teams.</p>
+        <p><strong>- Can we sign up as a team?</strong> <br style="display:block;">Yes, in the registration form there is the option to enter already existing teams.</p>
         
         
-    <p> <strong>- If we already are a team, should every person sign up?</strong><br>No, you would make it easier for us, if you submitted one registration per idea.</p><p>
-            <strong>- Can we take part as a university association?</strong><br>If your group consists of members of your association you can - of course - participate. However, note that you will need a defined team and should have the intention of founding a company.</p><p>
-            <strong>- In what format will the contest take place in Corona times?</strong><br>We have decided to hold the event in a hybrid format: The kick-off will at least take place completely digitally, the other main events will depend on the occurrence of infection. Most workshops are - following a hygiene concept - held on site.</p><p>
-            <strong>- Can I also participate if I am not in Karlsruhe during the competition?</strong><br>Yes, it will be possible to attend the obligatory events remotely. However, you might miss out some workshops that are held on site.</p></section>
+    <p> <strong>- If we already are a team, should every person sign up?</strong><br style="display:block;">No, you would make it easier for us, if you submitted one registration per idea.</p><p>
+            <strong>- Can we take part as a university association?</strong><br style="display:block;">If your group consists of members of your association you can - of course - participate. However, note that you will need a defined team and should have the intention of founding a company.</p><p>
+            <strong>- In what format will the contest take place in Corona times?</strong><br style="display:block;">We have decided to hold the event in a hybrid format: The kick-off will at least take place completely digitally, the other main events will depend on the occurrence of infection. Most workshops are - following a hygiene concept - held on site.</p><p>
+            <strong>- Can I also participate if I am not in Karlsruhe during the competition?</strong><br style="display:block;">Yes, it will be possible to attend the obligatory events remotely. However, you might miss out some workshops that are held on site.</p></section>
 <!--stopp-->
 
     <section class="wrapper style3 container special" style="margin-top: 100px">
