decreased distance from faq-section to become-a-gro-fan-section

--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -239,7 +239,7 @@
 
 <!---FAQ--->
 
-<article id="main">
+<article id="main" style="padding-top:2em;">
 <section class="wrapper style2 container special">
         <header class="major">
             <h2>FAQ</h2>
