--- a/Grow.Server/Styles/frontend.scss
+++ b/Grow.Server/Styles/frontend.scss
@@ -842,6 +842,32 @@ input[type="reset"],
 		}
 	}
 
+/* Not updating banner above header, by Toni with <3 */
+
+	#header {
+	  margin-top: 3em;
+
+	  &:before {
+	    content: "We're not actively updating this site at the moment. Stay tuned for the launch of our new website soon!";
+	    position: fixed;
+	    left: 0;
+	    top: 0;
+	    display: block;
+	    width: 100%;
+	    padding: 1em;
+	    border-bottom: 1px solid white;
+	    background: #b31919;
+	    text-align: center;
+	    line-height: 1em;
+	    text-transform: uppercase;
+	    letter-spacing: 1px;
+	    font-weight: 900;
+	    color: white;
+	    z-index: 2;
+	  }
+	}
+
+
 /* Dropotron */
 
 	.dropotron {
