--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
     }
     else
     {
-        <h2>From Student to Startup Test</h2>
+        <h2>From Student to Startup</h2>
     }
     <ul class="buttons">
         <li><a href="#cta" class="button special">Get involved</a></li>
@@ -54,7 +54,7 @@
         <header>
             @if (Model.IsBeforeContest)
             {
-                <h2 style="text-align: center">Stay tuned for @Model.Contest.Name</h2>
+                <h2 style="text-align: center">test Stay tuned for @Model.Contest.Name</h2>
             }
             else
             {
