--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
         <header>
             @if (Model.IsBeforeContest)
             {
-                <h2 style="text-align: center">test Stay tuned for @Model.Contest.Name</h2>
+                <h2 style="text-align: center">Stay tuned for @Model.Contest.Name</h2>
             }
             else
             {
